--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 </ul>
                 <div class="icons">
                     <img src="/img/user.svg" alt="">
-                    <img src="/img/socials.svg" alt="">
-                    <img src="/img/Cabinet.svg" alt="">
+                    <img class="socials" src="/img/socials.svg" alt="">
+                    <img class="socials" src="/img/Cabinet.svg" alt="">
                     <p class="langu">Ру</p>
                     <button class="btn">Добавить скидку</button>
                 </div>
@@ -102,7 +102,82 @@
                 </div>
             </div>
             <div class="right-side">
-                <h2 class="top-sale">Топовые скидки</h2>
+                <div class="right-content">
+                    <h2 class="top-sale">Топовые скидки</h2>
+                    <div class="menu-div">
+                        <p class="sale-menu">Питание</p>
+                        <p class="sale-menu">Связь</p>
+                        <p class="sale-menu">Магазины</p>
+                    </div>
+                    <div class="sale-cards">
+                        <div class="card">
+                            <img src="/img/Rectangle 1810 (4).png" alt="">
+                            <div class="card-text">
+                                <p class="card-name">Gosty</p>
+                                <p class="card-title">Каждый вторник — 20% на все меню</p>
+                                <div class="sale-info">
+                                    <p class="sale-name">Скидки</p>
+                                    <div>
+                                        <button class="sale-btn">Кешбэк</button>
+                                        <button class="sale-btn-percent">3%</button>
+                                    </div>
+                                </div>
+                                <p class="sale-name market">Рестораны</p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img src="/img/Rectangle 1810 (5).png" alt="">
+                            <div class="card-text">
+                                <p class="card-name">Shosh</p>
+                                <p class="card-title">Скидки на еду и напитки</p>
+                                <div class="sale-info">
+                                    <p class="sale-name">Скидки</p>
+                                    <div>
+                                        <button class="sale-btn">Кешбэк</button>
+                                        <button class="sale-btn-percent">3%</button>
+                                    </div>
+                                </div>
+                                <p class="sale-name market">Кафе</p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img src="/img/Rectangle 1810 (6).png" alt="">
+                            <div class="card-text">
+                                <p class="card-name">Petrovich</p>
+                                <p class="card-title">Ланч по выгодной цене и 2% кешбэк по промокоду</p>
+                                <div class="sale-info">
+                                    <p class="sale-name">Скидки</p>
+                                    <div>
+                                        <button class="sale-btn">Кешбэк</button>
+                                        <button class="sale-btn-percent">3%</button>
+                                    </div>
+                                </div>
+                                <p class="sale-name market">Рестораны</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <p class="intro">Добро пожаловать на сайт</p>
+                    <p class="intro-text">Ваш надёжный помощник в поиске лучших скидок и акций различных компаний!</p>
+                    <p class="intro-extend">Мы собрали для вас все самые выгодные предложения, чтобы вы могли сэкономить свои деньги и получить максимум удовольствия от покупок.</p>
+                    <p class="intro-extend">Развернуть текст</p>
+                </div>
+                <div>
+                    <p class="faq">FAQ</p>
+                    <div class="faq-content1">
+                        <p class="faq-info">Какие компании представлены на сайте?</p>
+                        <img src="/img/FAQ.svg" alt="">
+                    </div>
+                    <div class="faq-content1 faq-con2">
+                        <p class="faq-info">Как я могу быть в курсе новых скидок и акций на сайте?</p>
+                        <img src="/img/FAQ.svg" alt="">
+                    </div>
+                    <div class="faq-content1 faq-con2">
+                        <p class="faq-info">Могу ли я поделиться найденными скидками и акциями с друзьями?</p>
+                        <img src="/img/FAQ.svg" alt="">
+                    </div>
+                </div>
             </div>
         </div>
     </section>
